<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/AppLabel"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelSoTienGui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/vnd"
                android:textSize="18sp"
                android:layout_alignParentEnd="true"/>

            <EditText
                android:id="@+id/tbSoTienGui"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </RelativeLayout>

        <TextView
            android:id="@+id/labelLaiSuatGui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label2" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/laisuat"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"/>

            <EditText
                android:id="@+id/tbLaiSuat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </RelativeLayout>

        <TextView
            android:id="@+id/labelKyHan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label3" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/month"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"/>
        <EditText
            android:id="@+id/tbKyHan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
        </RelativeLayout>
        <Button
            android:id="@+id/btnKetQua"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:background="@drawable/background_btn_main"
            android:onClick="launchSecondActivity"
            android:text="@string/buttonLabel1" />


    </LinearLayout>
</ScrollView>